--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -1,12 +1,11 @@
 FROM nvidia/cuda:8.0-cudnn5-devel-ubuntu16.04
 
-MAINTAINER Kai-Yang Hsieh <b03611041@ntu.edu.tw>
+MAINTAINER Kai-Yang Hsieh <gsunny4178@gmail.com>
 
 ARG THEANO_VERSION=rel-0.9.0rc2
-ARG TENSORFLOW_VERSION=1.0.0
 ARG TENSORFLOW_ARCH=gpu
-ARG KERAS_VERSION=1.2.2
 ARG CAFFE_VERSION=master
+ARG TORCH_VERSION=latest
 
 #RUN echo -e "\n**********************\nNVIDIA Driver Version\n**********************\n" && \
 #	cat /proc/driver/nvidia/version && \
@@ -21,6 +20,7 @@ RUN apt-get update && apt-get install -y \
 		cmake \
 		curl \
 		g++ \
+		apt-transport-https \
 		gfortran \
 		git \
 		libffi-dev \
@@ -60,6 +60,7 @@ RUN apt-get update && apt-get install -y \
 		libvorbis-dev \
 		libxvidcore-dev \
 		libx264-dev \
+		libatlas-base-dev \
 		yasm \
 		libopencore-amrnb-dev \
 		libopencore-amrwb-dev \
@@ -69,9 +70,11 @@ RUN apt-get update && apt-get install -y \
 		libeigen3-dev \
 		python-dev \
 		python-tk \
+		python-pip \
 		python-numpy \
 		python3-dev \
 		python3-tk \
+		python3-pip \
 		python3-numpy \
 		ant \
 		default-jdk \
@@ -83,57 +86,70 @@ RUN apt-get update && apt-get install -y \
 # Link BLAS library to use OpenBLAS using the alternatives mechanism (https://www.scipy.org/scipylib/building/linux.html#debian-ubuntu)
 	update-alternatives --set libblas.so.3 /usr/lib/openblas-base/libblas.so.3
 
-# Install pip
-RUN curl -O https://bootstrap.pypa.io/get-pip.py && \
-	python get-pip.py && \
-	rm get-pip.py
+# upgrade pip
+RUN pip install --upgrade pip && pip3 install --upgrade pip
 
-# Add SNI support to Python
-RUN pip --no-cache-dir install \
+# install python3 packages
+RUN pip3 --no-cache-dir install --upgrade \
 		pyopenssl \
 		ndg-httpsclient \
-		pyasn1
-
-# Install useful Python packages using apt-get to avoid version incompatibilities with Tensorflow binary
-# especially numpy, scipy, skimage and sklearn (see https://github.com/tensorflow/tensorflow/issues/2034)
-
-RUN apt-get update && apt-get install -y \
-		python-numpy \
-		python-scipy \
-		python-nose \
-		python-h5py \
-		python-skimage \
-		python-matplotlib \
-		python-pandas \
-		python-sklearn \
-		python-sympy \
-		&& \
-	apt-get clean && \
-	apt-get autoremove && \
-	rm -rf /var/lib/apt/lists/*
-
-# Install other useful Python packages using pip
-RUN pip --no-cache-dir install --upgrade ipython && \
-	pip --no-cache-dir install \
+		pyasn1 \
+		scipy \ 
+		nose \
+		h5py \
+		scikit-image \
+		sklearn \
+		matplotlib \
+		pandas \
+		sympy \
+		ipython \
 		cython \
 		ipykernel \
 		jupyter \
-		path.py \
+		path.py \ 
 		Pillow \
 		pygments \
 		six \
 		sphinx \
 		wheel \
 		zmq \
+		nltk \
 		protobuf \
-		&& \
-	python -m ipykernel.kernelspec
+		ipdb \
+		tqdm \
+		python-dateutil && \
+	python3 -m ipykernel.kernelspec
 
+# install python2 packages
+RUN pip --no-cache-dir install --upgrade \
+		pyopenssl \
+		ndg-httpsclient \
+		pyasn1 \
+		scipy \ 
+		nose \
+		h5py \
+		scikit-image \
+		sklearn \
+		matplotlib \
+		pandas \
+		sympy \
+		ipython \
+		cython \
+		jupyter \
+		path.py \ 
+		Pillow \
+		pygments \
+		six \
+		sphinx \
+		wheel \
+		zmq \
+		nltk \
+		protobuf \
+		ipdb \
+		tqdm
 
 # Install TensorFlow
-RUN pip --no-cache-dir install \
-	https://storage.googleapis.com/tensorflow/linux/${TENSORFLOW_ARCH}/tensorflow_${TENSORFLOW_ARCH}-${TENSORFLOW_VERSION}-cp27-none-linux_x86_64.whl
-
+RUN pip3 --no-cache-dir install tensorflow-gpu
 
 # Install dependencies for Caffe and pyCaffe
 RUN apt-get update && apt-get install -y \
@@ -147,15 +163,16 @@ RUN apt-get update && apt-get install -y \
 		libprotobuf-dev \
 		libsnappy-dev \
 		protobuf-compiler \
+		sudo \
 		&& \
 	apt-get clean && \
 	apt-get autoremove && \
 	rm -rf /var/lib/apt/lists/*
 
 # Install Caffe
-RUN git clone -b ${CAFFE_VERSION} --depth 1 https://github.com/BVLC/caffe.git /root/caffe && \
-	cd /root/caffe && \
-	cat python/requirements.txt | xargs -n1 pip install && \
+RUN git clone -b ${CAFFE_VERSION} --depth 1 https://github.com/BVLC/caffe.git /opt/caffe && \
+	cd /opt/caffe && \
+	cat python/requirements.txt | xargs -n1 pip3 install --upgrade && \
 	mkdir build && cd build && \
 	cmake -DUSE_CUDNN=1 -DBLAS=Open .. && \
 	make -j"$(nproc)" all && \
@@ -163,7 +180,7 @@ RUN git clone -b ${CAFFE_VERSION} --depth 1 https://github.com/BVLC/caffe.git /r
 	make pycaffe
 
 # Set up Caffe environment variables
-ENV CAFFE_ROOT=/root/caffe
+ENV CAFFE_ROOT=/opt/caffe
 ENV PYCAFFE_ROOT=$CAFFE_ROOT/python
 ENV PYTHONPATH=$PYCAFFE_ROOT:$PYTHONPATH \
 	PATH=$CAFFE_ROOT/build/tools:$PYCAFFE_ROOT:$PATH
@@ -171,7 +188,7 @@ ENV PYTHONPATH=$PYCAFFE_ROOT:$PYTHONPATH \
 RUN echo "$CAFFE_ROOT/build/lib" >> /etc/ld.so.conf.d/caffe.conf && ldconfig
 
 # Install Theano and set up Theano config (.theanorc) for CUDA and OpenBLAS
-RUN pip --no-cache-dir install git+git://github.com/Theano/Theano.git@${THEANO_VERSION} && \
+RUN pip3 --no-cache-dir install git+git://github.com/Theano/Theano.git@${THEANO_VERSION} && \
 	\
 	echo "[global]\ndevice=gpu\nfloatX=float32\noptimizer_including=cudnn\nmode=FAST_RUN \
 		\n[lib]\ncnmem=0.95 \
@@ -181,23 +198,44 @@ RUN pip --no-cache-dir install git+git://github.com/Theano/Theano.git@${THEANO_V
 	> /root/.theanorc
 
 
-# Install Keras
-RUN pip --no-cache-dir install keras
+# Install Keras and upgrade dateutil to prevent tensorflow import error
+RUN pip3 --no-cache-dir install keras && pip3 install --upgrade python-dateutil
+
+# Install Torch
+RUN git clone https://github.com/torch/distro.git /home/ubuntu/torch --recursive && \
+	cd /home/ubuntu/torch && \
+	./install-deps && \
+	./install.sh
+
+# Export the LUA evironment variables manually
+ENV LUA_PATH='/home/ubuntu/.luarocks/share/lua/5.1/?.lua;/home/ubuntu/.luarocks/share/lua/5.1/?/init.lua;/home/ubuntu/torch/install/share/lua/5.1/?.lua;/home/ubuntu/torch/install/share/lua/5.1/?/init.lua;./?.lua;/home/ubuntu/torch/install/share/luajit-2.1.0-beta1/?.lua;/usr/local/share/lua/5.1/?.lua;/usr/local/share/lua/5.1/?/init.lua' \
+	LUA_CPATH='/home/ubuntu/.luarocks/lib/lua/5.1/?.so;/home/ubuntu/torch/install/lib/lua/5.1/?.so;./?.so;/usr/local/lib/lua/5.1/?.so;/usr/local/lib/lua/5.1/loadall.so' \
+	PATH=/home/ubuntu/torch/install/bin:$PATH \
+	LD_LIBRARY_PATH=/home/ubuntu/torch/install/lib:$LD_LIBRARY_PATH \
+	DYLD_LIBRARY_PATH=/home/ubuntu/torch/install/lib:$DYLD_LIBRARY_PATH
+ENV LUA_CPATH='/home/ubuntu/torch/install/lib/?.so;'$LUA_CPATH
+
+#instal gitKraken
+RUN wget https://release.gitkraken.com/linux/gitkraken-amd64.deb
 
 # Install OpenCV
-RUN git clone --depth 1 https://github.com/opencv/opencv.git /root/opencv && \
+RUN git clone https://github.com/opencv/opencv.git /root/opencv && \
+    git clone https://github.com/opencv/opencv_contrib.git /root/opencv_contrib && \
 	cd /root/opencv && \
 	mkdir build && \
 	cd build && \
-	cmake -DWITH_QT=ON -DWITH_OPENGL=ON -DFORCE_VTK=ON -DWITH_TBB=ON -DWITH_GDAL=ON -DWITH_XINE=ON .. && \
+	cmake -DWITH_QT=ON -DWITH_CUDA=ON -DWITH_OPENGL=ON -DFORCE_VTK=ON -DWITH_TBB=ON -DWITH_GDAL=ON -DWITH_XINE=ON -DOPENCV_EXTRA_MODULES_PATH=/root/opencv_contrib/modules .. && \
 	make -j"$(nproc)"  && \
 	make install && \
 	ldconfig && \
 	echo 'ln /dev/null /dev/raw1394' >> ~/.bashrc
 
+#install VS code
+RUN curl https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor > microsoft.gpg && mv microsoft.gpg /etc/apt/trusted.gpg.d/microsoft.gpg && sh -c 'echo "deb [arch=amd64] https://packages.microsoft.com/repos/vscode stable main" > /etc/apt/sources.list.d/vscode.list'
+
 COPY keyboard /etc/default/
 
-RUN add-apt-repository ppa:mystic-mirage/pycharm && add-apt-repository ppa:webupd8team/sublime-text-3
+RUN add-apt-repository ppa:mystic-mirage/pycharm && add-apt-repository ppa:webupd8team/sublime-text-3 && add-apt-repository multiverse
 
 #install some dependencies and vncserver
 RUN apt-get update && apt-get install -y --no-install-recommends \
@@ -205,14 +243,15 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 		gnome-panel \
 		gnome-settings-daemon \
 		metacity \
-		nautilus \
+		nemo \
 		gnome-terminal
 
 RUN DEBIAN_FRONTEND=noninteractive apt-get install -y \
 		vnc4server \
-		chromium-browser \
+		firefox \
+		code \
 		autocutsel \
-		sudo \
+		ffmpeg \
 		ttf-wqy-zenhei \
 		pycharm-community \
 		leafpad \
@@ -221,17 +260,24 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get install -y \
 		p7zip-full \
 		file-roller \
 		eclipse \
+		eclipse-cdt \
 		gpicview \
 		qt5-default \
+		libgl1-mesa-dev \
+		qtdeclarative5-dev \
+		qtcreator \
+		vlc \
+		nvidia-nsight \
+		liblua5.1-0-dev \
+		liblua50-dev \
+		liblualib50-dev \
+		gvfs-bin \
 		&& \
         apt-get clean && \
         apt-get autoremove && \
         rm -rf /var/lib/apt/lists/*
 
-#instal gitKraken
-RUN wget https://release.gitkraken.com/linux/gitkraken-amd64.deb
-RUN dpkg -i gitkraken-amd64.deb
-RUN rm -f gitkraken-amd64.deb
+RUN dpkg -i gitkraken-amd64.deb && rm -f gitkraken-amd64.deb
 
 #set the locale
 RUN locale-gen en_US.UTF-8
@@ -247,10 +293,8 @@ RUN useradd -ms /bin/bash ubuntu && echo "ubuntu:ubuntu" | chpasswd \
 #set vnc environment
 RUN mkdir /home/ubuntu/.vnc 
 COPY .vnc /home/ubuntu/.vnc
-RUN chmod 600 /home/ubuntu/.vnc/passwd
-RUN chmod +x /home/ubuntu/.vnc/xstartup
-RUN chown -R ubuntu /home/ubuntu/.vnc
-RUN chgrp -R ubuntu /home/ubuntu/.vnc
+RUN chmod 600 /home/ubuntu/.vnc/passwd \
+    && chmod +x /home/ubuntu/.vnc/xstartup
 
 # Set up notebook config
 COPY jupyter_notebook_config.py /home/ubuntu/.jupyter/
@@ -261,18 +305,19 @@ COPY run_jupyter.sh /ubuntu/
 # Expose Ports for TensorBoard (6006), Ipython (8888)
 EXPOSE 6006 8888 5900
 
-RUN mkdir /home/ubuntu/files
-RUN chown -R ubuntu /home/ubuntu/files
-RUN chgrp -R ubuntu /home/ubuntu/files
+RUN mkdir /home/ubuntu/files \
+	&& mkdir /home/ubuntu/nas \
+	&& mkdir /home/ubuntu/shared
 
 COPY startup.sh /opt/
-RUN chmod +x /opt/startup.sh
-RUN chown ubuntu /opt/startup.sh
-RUN chgrp ubuntu /opt/startup.sh
-RUN chown -R ubuntu /tmp
+COPY .bashrc /home/ubuntu
+RUN chmod +x /opt/startup.sh \
+	&& chown ubuntu /opt/startup.sh \
+	&& chgrp ubuntu /opt/startup.sh \
+	&& chown -R ubuntu /tmp \
+	&& chown -R ubuntu:ubuntu /home/ubuntu/
 
 USER ubuntu
-RUN mkdir /home/ubuntu/nas
-RUN mkdir /home/ubuntu/shared
 ENV HOME /home/ubuntu
-WORKDIR "/home/ubuntu/files"
+WORKDIR "/home/ubuntu"
+ENTRYPOINT ["/opt/startup.sh"]
